--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
-0.4 (UNRELEASED)
+0.4 (2008-11-01)
+  - Allow the root directory to be in the protected paths (thanks to Mubeen Jukaku!)
   - Add some setup instructions in the README file
   - Mention the new homepage in the README file
 
