--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.5 (UNRELEASED)
   - Always run rm even when there are no arguments
+  - Update author's email address
 
 0.4 (2008-11-01)
   - Allow the root directory to be in the protected paths (thanks to Mubeen Jukaku!)
