--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 0.5 (UNRELEASED)
   - Always run rm even when there are no arguments
+  - Add contents to the manpage
+  - Much cleaner code (almost at PerlCritic Level 1)
+  - Turn on taint mode
   - Update author's email address
 
 0.4 (2008-11-01)
