--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.5 (UNRELEASED)
+  - Add basic support for wildcards in config files
   - Always run rm even when there are no arguments
   - Add contents to the manpage
   - Much cleaner code (almost at PerlCritic Level 1)
