--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.7 (2009-09-23)
+  - Add CDPATH to the variables to untaint
+
 0.6 (2009-05-22)
   - Allow the deletion of symlinks to protected paths
   - Change the "skipping" message to make it obvious that it comes from safe-rm
