--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.10 (UNRELEASED)
+  - Add IFS to the list of environment variables to untaint
+
 0.9 (2013-01-11)
   - Add /lib32 and /lib64 to the default blacklist (bug #1097972)
   - Mention rmfd in the README
