--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-safe-rm - http://www.safe-rm.org.nz
+safe-rm - https://launchpad.net/safe-rm
 prevention of accidental deletions using a directory blacklist
 
-Copyright (C) 2008-2013  Francois Marier <francois@safe-rm.org.nz>
+Copyright (C) 2008-2014  Francois Marier <francois@fmarier.org>
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
