--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
-0.11 (UNRELEASED)
+0.11 (2014-10-08)
+  - Read user config from $XDG_CONFIG_HOME/safe-rm too
   - Update URL and email address (safe-rm.org.nz is deprecated)
 
 0.10 (2013-06-09)
