--- a/Changes
+++ b/Changes
@@ -12,7 +12,7 @@
   - Add IFS to the list of environment variables to untaint
 
 0.9 (2013-01-11)
-  - Add /lib32 and /lib64 to the default blacklist (bug #1097972)
+  - Add /lib32 and /lib64 to the default exclusions (bug #1097972)
   - Mention rmfd in the README
 
 0.8 (2009-10-15)
@@ -40,7 +40,7 @@
 
 0.3 (2008-09-09)
   - Look at the full path of files in the current directory to make sure they are
-    checked against the blacklist (thanks to Yi-Feng Tzeng!)
+    checked against the list of exclusions (thanks to Yi-Feng Tzeng!)
 
 0.2 (2008-06-09)
   - Add support for system-wide protected path list
