--- a/README
+++ b/README
@@ -3,18 +3,18 @@ prevention of accidental deletions by excluding important directories
 
 Copyright (C) 2008-2014  Francois Marier <francois@fmarier.org>
 
-   This program is free software: you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation, either version 3 of the License, or
-   (at your option) any later version.
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
 
-   You should have received a copy of the GNU General Public License
-   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 How to use
 -----------
@@ -62,18 +62,14 @@ Of course this is only usable on filesystems which support this feature.
 Here are two projects which allow you to recover recently deleted files by trapping
 all unlink(), rename() and open() system calls through the LD_PRELOAD facility:
 
-  delsafe
-  http://homepage.esoterica.pt/~nx0yew/delsafe/
-
-  libtrashcan
-  http://hpux.connect.org.uk/hppd/hpux/Development/Libraries/libtrash-0.2/readme.html
+* [delsafe](https://web.archive.org/web/20081027033142/http://homepage.esoterica.pt:80/~nx0yew/delsafe/)
+* [libtrashcan](http://hpux.connect.org.uk/hppd/hpux/Development/Libraries/libtrash-0.2/readme.html)
 
 There are also projects which implement the FreeDesktop.org trashcan spec. For example:
 
-  trash-cli
-  http://code.google.com/p/trash-cli/
+* [trash-cli](https://github.com/andreafrancia/trash-cli)
 
 Finally, this project is a fork of GNU coreutils and adds features similar to safe-rm
 to the rm command directly:
 
-  http://wiki.github.com/d5h/rmfd/
+* [rmfd](https://github.com/d5h/rmfd)
